--- a/views/catalog/itempage.hbs
+++ b/views/catalog/itempage.hbs
@@ -25,4 +25,21 @@ var btn = document.getElementById("order-btn");
             headers: {'Content-Type': 'application/json'}
         });
     }
+    var del = document.getElementById("delete-btn");
+    if(del)
+    del.onclick = async function(){
+        var id = del.value;
+        var data ={ID: id};
+        const response = await fetch('/catalog/delete', {
+            method: 'post',
+            body: JSON.stringify(data),
+            headers: {'Content-Type': 'application/json'}
+        });
+        if(response.status == 400) alert("Ошибка сервера");
+        else 
+        {
+            alert("Запись успешно удалена");
+            location.assign("/catalog");
+        }
+    }
 </script>
