--- a/views/partials/item.hbs
+++ b/views/partials/item.hbs
@@ -1,7 +1,7 @@
 <li class="imdiz-product">
     <div class="imdiz-product__inner">                
         <!--!<div class="imdiz-product__image-wrap">-->
-            <a href="/" class="imdiz-product__img-link">
+            <a href="/itempage/{{item.itemID}}" class="imdiz-product__img-link">
                 <img src={{item.itemimagepath}} alt="Изображение продукта">
             </a>                    
         <!--</div>-->
