--- a/views/contracts/contractinfo.hbs
+++ b/views/contracts/contractinfo.hbs
@@ -20,7 +20,7 @@
 				</tr>
 				<tr>
 					<td>Логин арендатора:</td>
-					<td><input readonly name="input" value="{{contract.usersurname}}"></td>
+					<td><input readonly name="input" value="{{contract.userlogin}}"></td>
 				</tr>
 				<tr>
 					<td>ФИО работника:</td>
