--- a/views/lk/lk.hbs
+++ b/views/lk/lk.hbs
@@ -12,10 +12,18 @@
 		<div class="grid">
 			<div>
 				<button class="lkbutton" type="button" name="button">
-					<a class="link" href="#">
+					<a class="link" href="/orders">
 						<img class="lklink" src="../../image/svg/delivery.svg" alt="" />
 					</a>
 					<p>Заказы</p>
+				</button>
+			</div>
+			<div>
+				<button class="lkbutton" type="button" name="button">
+					<a class="link" href="/contracts">
+						<img class="lklink" src="../../image/svg/delivery.svg" alt="" />
+					</a>
+					<p>Контракты</p>
 				</button>
 			</div>
 			<div>
