--- a/views/partials/rentableitem.hbs
+++ b/views/partials/rentableitem.hbs
@@ -12,6 +12,9 @@
 						<span>Статус: {{item.itemstatusname}}</span>
 					</p>       
             <p class="imdiz-product__price">
+            <span>Категория: {{item.categoryname}}</span>
+            </p>
+            <p class="imdiz-product__price">
                 <span class="imdiz-product__cost">Цена: {{item.itemprice}}</span>
             </p>
         </div>
